--- a/assessment.html
+++ b/assessment.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="assessment.css">
-    <title>EAEBBが作ったあなたの良いところ診断</title>
+    <title>EAEBBが作った、あなたにオススメのゲームジャンル診断</title>
 </head>
 <body>
-    <h1>あなたのいいところは?</h1>
+    <h1>あなたにオススメのゲームジャンルは?</h1>
     <p>診断したい名前を入れて下さい</p>
+    ※家庭用のTVゲームもしくはPCゲームがメインで、ソーシャルゲームは入っていません。
     <input type="text" id="user-name" size="40" maxlength="20">
     <button id="assessment">診断する</button>
     <div id="result-area"></div>
