--- a/assessment.html
+++ b/assessment.html
@@ -8,7 +8,7 @@
 <body>
     <h1>あなたにオススメのゲームジャンルは?</h1>
     <p>診断したい名前を入れて下さい</p>
-    ※家庭用のTVゲームもしくはPCゲームがメインで、ソーシャルゲームは入っていません。
+    <p>※家庭用のTVゲームもしくはPCゲームがメインで、ソーシャルゲームは入っていません。</p>
     <input type="text" id="user-name" size="40" maxlength="20">
     <button id="assessment">診断する</button>
     <div id="result-area"></div>
