--- a/assessment.html
+++ b/assessment.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="assessment.css">
-    <title>EAEBBが作った、あなたにオススメのゲームジャンル診断</title>
+    <title>EAEBBが作った、あなたにオススメのコンピューターゲームジャンル診断</title>
 </head>
 <body>
-    <h1>あなたにオススメのゲームジャンルは?</h1>
+    <h1>あなたにオススメのTV/PCゲームジャンルは?</h1>
     <p>診断したい名前を入れて下さい</p>
     <input type="text" id="user-name" size="40" maxlength="20">
     <button id="assessment">診断する</button>
