--- a/assessment.html
+++ b/assessment.html
@@ -6,7 +6,10 @@
     <title>EAEBBが作った、あなたにオススメのコンピューターゲームジャンル診断</title>
 </head>
 <body>
-    <h1>あなたにオススメのTV/PCゲームジャンルを診断します</h1>
+    <h1 style="white-space: pre;">
+        あなたにオススメの
+        TV/PCゲームジャンルを診断します
+    </h1>
     <p>診断したい名前を入れて下さい</p>
     <input type="text" id="user-name" size="40" maxlength="20">
     <button id="assessment">診断する</button>
